# libEXIB

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Documentation/: API.md  EXIB.md  EXIT.md
Include/EXIB/: Compiler.h  Decoder.h  Decompiler.h  EXIB.h  Encoder.h  EncoderArray.h  EncoderString.h  EncoderTypes.h
Source/: Allocator.c  AllocatorInternal.h  CMakeLists.txt  Compiler.c  Decoder.c  DecoderArray.c  DecoderField.c  DecoderInternal.h  DecoderObject.c  DecoderTString.c  Decompiler.c  Encoder.c  EncoderArray.c  EncoderInternal.h  EncoderObject.c  EncoderString.c  EncoderTString.c  Util.c
Tests/: Benchmark.c  Benchmark.h  Benchmark_DEC.c  Benchmark_ENC.c  CMakeLists.txt  Samples.h  Test.c  Test.h  Test_DEC.c  Test_DEC.h  Tests_DEC.c  Tests_ENC.c
Tools/: CMakeLists.txt  excc.c  exdc.c
